[build-system]
requires = ["setuptools", "wheel", "sentry"]

[tool.black]
line-length=100
target-version=['py27']
include='\.py$'

[tool.isort]
line_length=100
include_trailing_comma=true
lines_between_sections=1
multi_line_output='3'
known_first_party='sentry,sentry_plugins'
default_section='THIRDPARTY'
indent='    '
skip='setup.py'
